--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,14 @@
   --animate-third: moveInCircle 40s linear infinite;
   --animate-fourth: moveHorizontal 40s ease infinite;
   --animate-fifth: moveInCircle 20s ease infinite;
+  --animate-scroll: scroll var(--animation-duration, 40s)
+    var(--animation-direction, forwards) linear infinite;
+
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
   @keyframes moveHorizontal {
     0% {
       transform: translateX(-50%) translateY(-10%);
